force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/PVL_Express_Change_Broker_Form__c.object-meta.xml
<CustomObject>
    <label>Express Change Broker</label>
    <nameField>
        <displayFormat>ECB-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Express Change Broker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>