force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Agent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form</relationshipName>
    <type>Lookup</type>
</CustomField>