force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Associated_License__c.field-meta.xml
<CustomField>
    <fullName>Agent_Associated_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Associated License</label>
    <referenceTo>AssociatedLicense__c</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form</relationshipName>
    <type>Lookup</type>
</CustomField>