force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Confirmed_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Confirmed_Info_Date__c</fullName>
    <label>Agent Confirmed Info Date</label>
    <type>DateTime</type>
</CustomField>