force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Submitted_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Submitted_Request_Date__c</fullName>
    <label>Agent Submitted Request Date</label>
    <type>DateTime</type>
</CustomField>