force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Token__c.field-meta.xml
<CustomField>
    <fullName>Agent_Token__c</fullName>
    <label>Agent Token</label>
    <length>62</length>
    <type>Text</type>
</CustomField>