force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Verification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Verification_Sent_Date__c</fullName>
    <label>Agent Verification Sent Date</label>
    <type>DateTime</type>
</CustomField>