force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Agent_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Verified_Date__c</fullName>
    <label>Agent Verified Date</label>
    <type>DateTime</type>
</CustomField>