force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Days_Waiting_on_Hiring_Broker__c.field-meta.xml
<CustomField>
    <fullName>Days_Waiting_on_Hiring_Broker__c</fullName>
    <label>Days Waiting on Hiring Broker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>