force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Hire_Date_HST__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date_HST__c</fullName>
    <label>Hire Date HST</label>
    <type>Date</type>
</CustomField>