force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form1</relationshipName>
    <type>Lookup</type>
</CustomField>