force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Broker_Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Broker_Canceled_Date__c</fullName>
    <label>New Broker Canceled Date</label>
    <type>DateTime</type>
</CustomField>