force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Broker_Email__c</fullName>
    <label>New Broker Email</label>
    <type>Email</type>
</CustomField>