force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Broker_Name__c</fullName>
    <label>New Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>