force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Broker_Token__c.field-meta.xml
<CustomField>
    <fullName>New_Broker_Token__c</fullName>
    <label>New Broker Token</label>
    <length>62</length>
    <type>Text</type>
</CustomField>