force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Broker_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Broker_Verified_Date__c</fullName>
    <label>New Broker Verified Date</label>
    <type>DateTime</type>
</CustomField>