force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/New_Brokerage_License__c.field-meta.xml
<CustomField>
    <fullName>New_Brokerage_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Brokerage License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form3</relationshipName>
    <type>Lookup</type>
</CustomField>