force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/PVL_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>PVL_Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PVL Portal User</label>
    <referenceTo>PVL_Portal_User__c</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form</relationshipName>
    <type>Lookup</type>
</CustomField>