force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/PVL_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>PVL_Record_Link__c</fullName>
    <label>PVL Record Link</label>
    <length>300</length>
    <type>Html</type>
</CustomField>