force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Release_Date_HST__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_HST__c</fullName>
    <label>Release Date HST</label>
    <type>Date</type>
</CustomField>