force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Releasing_Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Releasing_Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Releasing Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form2</relationshipName>
    <type>Lookup</type>
</CustomField>