force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Releasing_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Releasing_Broker_Email__c</fullName>
    <label>Releasing Broker Email</label>
    <type>Email</type>
</CustomField>