force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Releasing_Broker_License__c.field-meta.xml
<CustomField>
    <fullName>Releasing_Broker_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Releasing Broker License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipName>PVL_Express_Change_Broker_Form2</relationshipName>
    <type>Lookup</type>
</CustomField>