force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Releasing_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Releasing_Broker_Name__c</fullName>
    <label>Releasing Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>