force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Releasing_Broker_Token__c.field-meta.xml
<CustomField>
    <fullName>Releasing_Broker_Token__c</fullName>
    <label>Releasing Broker Token</label>
    <length>62</length>
    <type>Text</type>
</CustomField>