force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Step 2</fullName>
            </value>
            <value>
                <fullName>Step 3</fullName>
            </value>
            <value>
                <fullName>Step 4</fullName>
            </value>
            <value>
                <fullName>Step 5</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>