force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/Step_and_Status__c.field-meta.xml
<CustomField>
    <fullName>Step_and_Status__c</fullName>
    <formula>TEXT(Step__c) &amp; &quot; › &quot; &amp; TEXT(WP_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step and Status</label>
    <type>Text</type>
</CustomField>