force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/User_EHawaii_ID__c.field-meta.xml
<CustomField>
    <fullName>User_EHawaii_ID__c</fullName>
    <label>User EHawaii ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>