force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/WP_Status__c.field-meta.xml
<CustomField>
    <fullName>WP_Status__c</fullName>
    <label>WP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent E-mail is Missing</fullName>
            </value>
            <value>
                <fullName>Agent E-mail is Invalid</fullName>
            </value>
            <value>
                <fullName>Agent E-mail is Valid</fullName>
            </value>
            <value>
                <fullName>Agent Verification E-mail Sent</fullName>
            </value>
            <value>
                <fullName>Agent E-mail Verified</fullName>
            </value>
            <value>
                <fullName>Releasing Broker Verification Sent</fullName>
            </value>
            <value>
                <fullName>Releasing Broker Verified</fullName>
            </value>
            <value>
                <fullName>New Broker Verification Sent</fullName>
            </value>
            <value>
                <fullName>New Broker Verified</fullName>
            </value>
            <value>
                <fullName>Request Complete</fullName>
            </value>
            <value>
                <fullName>Request Canceled - Releasing Broker Unresponsive</fullName>
            </value>
            <value>
                <fullName>Agent Information Confirmed</fullName>
            </value>
            <value>
                <fullName>Request Canceled - Hiring Broker Unresponsive</fullName>
            </value>
            <value>
                <fullName>Agent Verification E-mail Resend Request</fullName>
            </value>
            <value>
                <fullName>Request Canceled - Agent Canceled</fullName>
            </value>
            <value>
                <fullName>Request Canceled - Hiring Broker Canceled</fullName>
            </value>
            <value>
                <fullName>Change Request Initiated</fullName>
            </value>
            <value>
                <fullName>Request Canceled - E-mail Bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>