force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/fields/WP_User_ID__c.field-meta.xml
<CustomField>
    <fullName>WP_User_ID__c</fullName>
    <label>WP User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>