force-app/main/default/objects/PVL_Express_Change_Broker_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>WP_Status__c</columns>
    <columns>Agent_Account__c</columns>
    <columns>Releasing_Broker_Account__c</columns>
    <columns>New_Broker_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>